<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="_0_00_am_0_00_am">0:00 AM - 0:00 AM</string>
    <string name="about">About</string>
    <string name="accept">ACCEPT</string>
    <string name="account_exists">An account with this email already exists</string>
    <string name="after_the_flight">AFTER THE FLIGHT</string>
    <string name="alarms">Alarms</string>
    <string name="and_the_mask_detects_that_you_are_asleep_it_automatically_starts_the_light_therapy">and the mask detects that you are asleep it automatically starts the light therapy.</string>
    <string name="answering_these_questions_will_help_us_to_better_understand_your_sleep">answering these questions will help us to better understand your sleep</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_answering_questions">Answering these questions will help\10us provide even more accurate\10feedback and sleep tips for you.</string>
    <string name="are_you_sure_anyway_you_can_always">Answering these questions will help us to provide even more accurate feedback and sleep tips for you.</string>
    <string name="are_you_sure_you_want_to_leave">Are you sure you\10want to leave?</string>
    <string name="artificial_dawn">ARTIFICIAL DAWN</string>
    <string name="asleep">ASLEEP</string>
    <string name="automatic_sleep_start">AUTOMATIC SLEEP START</string>
    <string name="automatic_sleep_text">We will wake you up at %s</string>
    <string name="automatic_sleep_title">Your sleep event started automatically</string>
    <string name="av_sleep_time_heart_rate">AV. SLEEP TIME HEART RATE</string>
    <string name="average">AVERAGE</string>
    <string name="average_awake_time_heart_rate">AV. AWAKE TIME HEART RATE</string>
    <string name="average_small">average</string>
    <string name="awake">AWAKE</string>
    <string name="battery_level">battery level: %s</string>
    <string name="before_the_flight">BEFORE THE FLIGHT</string>
    <string name="between_colon">BETWEEN:</string>
    <string name="biorhythm">BIORHYTHM</string>
    <string name="biorhythm_synchronization">BIORHYTHM SYNCHRONIZATION:</string>
    <string name="biorhythm_text">The best thing you can do for your health and well being is to align your lifestyle to your natural biorhythm. Set your biorhythm alarm clock here and get your natural groove back.</string>
    <string name="bluetooth_is_disabled">BLUETOOTH IS DISABLED</string>
    <string name="body_refresh">BODY REFRESH</string>
    <string name="booking_number">BOOKING NUMBER</string>
    <string name="booking_reference_number">Booking reference number</string>
    <string name="booking_reference_number_description">A booking reference is a unique code specific to an individual reservation. It is also known as a Record/Booking Locator (or RecLoc), PNR Code, confirmation number or reference number. It can be found on your tickets, confirmation invoice or travel documentation. If you received an e-ticket via email, your booking reference is the six character alphanumeric code.</string>
    <string name="booking_reference_number_highlight">It can be found on your tickets, confirmation invoice or travel documentation.</string>
    <string name="bpm">bpm</string>
    <string name="bright">BRIGHT</string>
    <string name="buy">BUY</string>
    <string name="cancel">CANCEL</string>
    <string name="cancel_therapy">CANCEL\10THERAPY</string>
    <string name="change">CHANGE</string>
    <string name="change_journey">CHANGE\10JOURNEY</string>
    <string name="change_mask">CHANGE / UNPAIR MASK</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="chat_with_us">Chat with us</string>
    <string name="check_for_update">CHECK FOR UPDATE</string>
    <string name="close">CLOSE</string>
    <string name="comfortable">COMFORTABLE</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="connection_timed_out">Connection timed out! Check your Internet connection and try again.</string>
    <string name="continue_text">CONTINUE</string>
    <string name="current">CURRENT</string>
    <string name="current_version_value">Current version %s</string>
    <string name="currently_there_are_no_tips">There are no tips for today.</string>
    <string name="date_of_birth">DATE OF BIRTH</string>
    <string name="date_of_birth_colon">DATE OF BIRTH:</string>
    <string name="date_of_the_flight">Date of the flight</string>
    <string name="days_30">30 DAYS</string>
    <string name="days_7">7 DAYS</string>
    <string name="days_grouped">GROUPED DAYS</string>
    <string name="days_separated">SEPARATE DAYS</string>
    <string name="deep">DEEP</string>
    <string name="delete_sleep">DELETE SLEEP</string>
    <string name="departure_date">DEPARTURE DATE</string>
    <string name="destination">DESTINATION</string>
    <string name="dimmed">DIMMED</string>
    <string name="don_t_have_the_nneuroon_mask">DON\'T HAVE A\10NEUROON MASK?</string>
    <string name="done">DONE</string>
    <string name="dont_show_this_message_again">DON\'T SHOW THIS MESSAGE AGAIN</string>
    <string name="dont_use">DON\'T USE</string>
    <string name="downloading_software">Downloading software</string>
    <string name="during_the_flight">DURING THE FLIGHT</string>
    <string name="during_the_night_i_felt">DURING THE NIGHT I FELT:</string>
    <string name="during_the_night_i_had_bad_dreams">DURING THE NIGHT I HAD BAD DREAMS:</string>
    <string name="during_the_process_you_will_see_advices_given_you_by_the_neuroon_system_such_as">During the process you will see advices given you by the Neuroon system such as:</string>
    <string name="during_the_therapy_the_neuroon_shine_in_your_closed_eyes_with_light_pulses_that_reach_the_body_clock_area_within_your_brain_and_adjust_it_minimizing_jet_lag">During the therapy, while your eyes are closed, the Neuroon emits light pulses that stimulate and adjust the part of your brain that controls your body clock thereby minimizing jet lag.</string>
    <string name="during_this_period_you_should_avoid_sun_or_strong_light_stay_inside_or_wear_dark_glasses_outside">During this period you should avoid sun or strong light. Stay inside or wear dark glasses outside.</string>
    <string name="early_bird">Early bird</string>
    <string name="email_colon">EMAIL:</string>
    <string name="email_uppercase">EMAIL</string>
    <string name="enable">ENABLE</string>
    <string name="end_therapy">END THERAPY</string>
    <string name="epileptic">Epileptic</string>
    <string name="faq">FAQ</string>
    <string name="female">FEMALE</string>
    <string name="finish">FINISH</string>
    <string name="flight">FLIGHT</string>
    <string name="flight_time">flight time</string>
    <string name="flying_from">Flying from</string>
    <string name="flying_to">Flying to</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="frequent_flier">Frequent flier</string>
    <string name="fri">FRI</string>
    <string name="from_colon">FROM:</string>
    <string name="general_info">GENERAL INFO</string>
    <string name="good_morning">GOOD MORNING</string>
    <string name="good_morning_sunshine_nhow_did_you_sleep_last_night">Good morning sunshine!\10How did you sleep last night?</string>
    <string name="have_a_newborn_child">Have a newborn child</string>
    <string name="have_diagnosed_sleep_disorder">Have diagnosed sleep disorder</string>
    <string name="header_booking_reference_number">BOOKING\10REFERENCE\10NUMBER</string>
    <string name="height">HEIGHT:</string>
    <string name="high">high</string>
    <string name="highest_heart_rate">HIGHEST HEART RATE</string>
    <string name="highest_rate">HIGHEST RATE</string>
    <string name="hours_to_beat">%sH TO BEAT</string>
    <string name="how_to_use_your_jet_lag_blocker_therapy_main_screen">How to use your JET LAG BLOCKER therapy main screen:</string>
    <string name="i_accept_t_c">I ACCEPT TERMS &amp; CONDITIONS</string>
    <string name="if_you_are_awake_during_this_period_you_should_exposure_to_the_sun_or_use_the_neuroon_light_boost">If you are awake during this period you should exposure to the sun or use the Neuroon Light Boost.</string>
    <string name="if_you_are_sleeping_with_the_neuroon_mask_during_the_seek_light_period">If you are sleeping with the Neuroon mask during the seek light period</string>
    <string name="menu_neuroon_mask">Neuroon mask</string>
    <string name="menu_profile">Profile</string>
    <string name="mon">MON</string>
    <string name="more">MORE</string>
    <string name="no_caps">NO</string>
    <string name="normal">NORMAL</string>
    <string name="now_i_feel">NOW I FEEL:</string>
    <string name="number_of_awakenings">NUMBER OF AWAKENINGS</string>
    <string name="pain">PAIN</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="refreshed">REFRESHED</string>
    <string name="report_a_problem">Report a Problem</string>
    <string name="sat">SAT</string>
    <string name="science_of_sleep">SCIENCE OF SLEEP</string>
    <string name="sleep">SLEEP</string>
    <string name="sleep_duration">SLEEP DURATION</string>
    <string name="sleep_score">SLEEP SCORE</string>
    <string name="sleep_time_span">SLEEP TIME SPAN</string>
    <string name="sun">SUN</string>
    <string name="support">SUPPORT</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="thu">THU</string>
    <string name="time_00_00_AM">00:00 AM</string>
    <string name="time_awake">TIME AWAKE</string>
    <string name="time_to_fall_asleep">TIME TO FALL ASLEEP</string>
    <string name="tips_collection">TIPS &amp; ADVICE</string>
    <string name="tired">TIRED</string>
    <string name="title_sleep_summary">SLEEP SUMMARY</string>
    <string name="too_cold">TOO COLD</string>
    <string name="too_hot">TOO HOT</string>
    <string name="tue">TUE</string>
    <string name="wake">WAKE</string>
    <string name="wed">WED</string>
    <string name="yes_caps">YES</string>
    <string name="_0_00">0:00</string>
    <string name="h">h</string>
    <string name="per_100">/ 100</string>
    <string name="zero">0</string>
    <string name="zero_time">00:00</string>
</resources>