<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/bg_white" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="0dp">
        <com.inteliclinic.neuroon.views.ThinTextView android:textSize="32sp" android:textColor="@color/blue_3054FA" android:layout_gravity="center" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:layout_marginBottom="16dp" android:text="@string/title_sleep_summary"/>
        <com.inteliclinic.neuroon.views.LightTextView android:textColor="@color/text_normal_color" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginRight="24dp" android:layout_marginBottom="16dp" android:text="@string/good_morning_sunshine_nhow_did_you_sleep_last_night" android:lineSpacingExtra="4dp"/>
        <com.inteliclinic.neuroon.views.LightTextView android:textColor="@color/text_normal_color" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginRight="24dp" android:text="@string/now_i_feel" android:lineSpacingExtra="4dp"/>
        <LinearLayout android:gravity="bottom" android:background="@drawable/bg_round_grey" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="8dp" android:layout_marginRight="20dp" android:layout_marginBottom="16dp">
            <com.inteliclinic.neuroon.views.LightTextView android:enabled="false" android:textColor="@color/button_switch_blue_text_color" android:gravity="center" android:id="@+id/refreshed_btn" android:background="@drawable/button_switch_blue" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/refreshed" android:layout_weight="1"/>
            <com.inteliclinic.neuroon.views.LightTextView android:textColor="@color/button_switch_blue_text_color" android:gravity="center" android:id="@+id/tired_btn" android:background="@drawable/button_switch_blue" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/tired" android:layout_weight="1"/>
        </LinearLayout>
        <com.inteliclinic.neuroon.views.LightTextView android:textColor="@color/text_normal_color" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginRight="24dp" android:text="@string/during_the_night_i_felt" android:lineSpacingExtra="4dp"/>
        <LinearLayout android:gravity="bottom" android:background="@drawable/bg_round_grey" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="8dp" android:layout_marginRight="20dp">
            <com.inteliclinic.neuroon.views.LightTextView android:textColor="@color/button_switch_blue_text_color" android:gravity="center" android:id="@+id/too_cold_btn" android:background="@drawable/button_switch_blue" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/too_cold" android:layout_weight="1.15"/>
            <com.inteliclinic.neuroon.views.LightTextView android:enabled="false" android:textColor="@color/button_switch_blue_text_color" android:gravity="center" android:id="@+id/normal_btn" android:background="@drawable/button_switch_blue" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/normal" android:layout_weight="1"/>
            <com.inteliclinic.neuroon.views.LightTextView android:textColor="@color/button_switch_blue_text_color" android:gravity="center" android:id="@+id/too_hot_btn" android:background="@drawable/button_switch_blue" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/too_hot" android:layout_weight="1.06"/>
        </LinearLayout>
        <LinearLayout android:gravity="bottom" android:background="@drawable/bg_round_grey" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="8dp" android:layout_marginRight="20dp" android:layout_marginBottom="16dp">
            <com.inteliclinic.neuroon.views.LightTextView android:enabled="false" android:textColor="@color/button_switch_blue_text_color" android:gravity="center" android:id="@+id/comfortable_btn" android:background="@drawable/button_switch_blue" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/comfortable" android:layout_weight="1"/>
            <com.inteliclinic.neuroon.views.LightTextView android:textColor="@color/button_switch_blue_text_color" android:gravity="center" android:id="@+id/pain_btn" android:background="@drawable/button_switch_blue" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/pain" android:layout_weight="1"/>
        </LinearLayout>
        <com.inteliclinic.neuroon.views.LightTextView android:textColor="@color/text_normal_color" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginRight="24dp" android:text="@string/during_the_night_i_had_bad_dreams" android:lineSpacingExtra="4dp"/>
        <LinearLayout android:gravity="bottom" android:background="@drawable/bg_round_grey" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="8dp" android:layout_marginRight="20dp">
            <com.inteliclinic.neuroon.views.LightTextView android:enabled="false" android:textColor="@color/button_switch_blue_text_color" android:gravity="center" android:id="@+id/dreams_no_btn" android:background="@drawable/button_switch_blue" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/no_caps" android:layout_weight="1"/>
            <com.inteliclinic.neuroon.views.LightTextView android:textColor="@color/button_switch_blue_text_color" android:gravity="center" android:id="@+id/dreams_yes_btn" android:background="@drawable/button_switch_blue" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/yes_caps" android:layout_weight="1"/>
        </LinearLayout>
        <com.inteliclinic.neuroon.views.LightTextView android:textColor="@color/text_normal_color" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24dp" android:layout_marginRight="24dp" android:text="@string/answering_these_questions_will_help_us_to_better_understand_your_sleep" android:lineSpacingExtra="4dp"/>
        <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">
            <com.inteliclinic.neuroon.views.ThinButton android:layout_gravity="bottom|center_vertical|center_horizontal|center" android:id="@+id/do_button" android:paddingLeft="32dp" android:paddingTop="16dp" android:paddingRight="40dp" android:paddingBottom="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="24dp" android:text="@string/sleep_score" style="@style/ButtonBlackBlue"/>
        </FrameLayout>
    </LinearLayout>
</ScrollView>
