<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <com.inteliclinic.neuroon.views.LightTextView android:textSize="24sp" android:textColor="@color/blue_3054FA" android:id="@+id/sleep_score" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginTop="16dp" android:text="@string/zero"/>
        <com.inteliclinic.neuroon.views.ThinTextView android:textColor="@color/text_normal_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:text="@string/per_100" android:layout_toRightOf="@+id/sleep_score" android:layout_alignBottom="@+id/sleep_score"/>
        <com.inteliclinic.neuroon.views.ThinTextView android:textColor="@color/text_normal_color" android:id="@+id/sleep_score_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/sleep_score" android:layout_below="@+id/sleep_score" android:layout_alignLeft="@+id/sleep_score"/>
        <com.inteliclinic.neuroon.views.LightTextView android:textSize="24sp" android:textColor="@color/blue_3054FA" android:id="@+id/sleep_duration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginTop="16dp" android:text="@string/zero_time" android:layout_below="@+id/sleep_score_title"/>
        <com.inteliclinic.neuroon.views.ThinTextView android:textColor="@color/text_normal_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:text="@string/h" android:layout_toRightOf="@+id/sleep_duration" android:layout_alignBottom="@+id/sleep_duration"/>
        <com.inteliclinic.neuroon.views.ThinTextView android:textColor="@color/text_normal_color" android:id="@+id/sleep_duration_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/sleep_duration" android:layout_below="@+id/sleep_duration" android:layout_alignLeft="@+id/sleep_duration"/>
        <com.inteliclinic.neuroon.views.LightTextView android:textSize="24sp" android:textColor="@color/blue_3054FA" android:id="@+id/time_awake" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginTop="16dp" android:text="@string/zero_time" android:layout_below="@+id/sleep_duration_title"/>
        <com.inteliclinic.neuroon.views.ThinTextView android:textColor="@color/text_normal_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:text="@string/h" android:layout_toRightOf="@+id/time_awake" android:layout_alignBottom="@+id/time_awake"/>
        <com.inteliclinic.neuroon.views.ThinTextView android:textColor="@color/text_normal_color" android:id="@+id/time_awake_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/time_awake" android:layout_below="@+id/time_awake" android:layout_alignLeft="@+id/time_awake"/>
        <com.inteliclinic.neuroon.views.LightTextView android:textSize="24sp" android:textColor="@color/blue_3054FA" android:id="@+id/sleep_time_span" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginTop="16dp" android:text="@string/_0_00_am_0_00_am" android:layout_below="@+id/time_awake_title"/>
        <com.inteliclinic.neuroon.views.ThinTextView android:textColor="@color/text_normal_color" android:id="@+id/sleep_time_span_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/sleep_time_span" android:layout_below="@+id/sleep_time_span" android:layout_alignLeft="@+id/sleep_time_span"/>
        <com.inteliclinic.neuroon.views.LightTextView android:textSize="24sp" android:textColor="@color/blue_3054FA" android:id="@+id/time_to_fall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginTop="16dp" android:text="@string/_0_00" android:layout_below="@+id/sleep_time_span_title"/>
        <com.inteliclinic.neuroon.views.ThinTextView android:textColor="@color/text_normal_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:text="@string/h" android:layout_toRightOf="@+id/time_to_fall" android:layout_alignBottom="@+id/time_to_fall"/>
        <com.inteliclinic.neuroon.views.ThinTextView android:textColor="@color/text_normal_color" android:id="@+id/time_to_fall_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/time_to_fall_asleep" android:layout_below="@+id/time_to_fall" android:layout_alignLeft="@+id/time_to_fall"/>
        <com.inteliclinic.neuroon.views.LightTextView android:textSize="24sp" android:textColor="@color/blue_3054FA" android:id="@+id/number_of_awakenings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="32dp" android:layout_marginTop="16dp" android:text="@string/zero" android:layout_below="@+id/time_to_fall_title"/>
        <com.inteliclinic.neuroon.views.ThinTextView android:textColor="@color/text_normal_color" android:id="@+id/number_of_awakenings_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/number_of_awakenings" android:layout_below="@+id/number_of_awakenings" android:layout_alignLeft="@+id/number_of_awakenings"/>
        <ImageView android:id="@+id/divider" android:layout_width="match_parent" android:layout_height="1dp" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginTop="15dp" android:layout_marginRight="@dimen/activity_horizontal_margin" android:layout_marginBottom="15dp" android:src="@drawable/line_divide" android:layout_below="@+id/number_of_awakenings_title"/>
        <com.inteliclinic.neuroon.views.LightTextView android:textColor="@color/blue_3054FA" android:id="@+id/start_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time_00_00_AM" android:layout_below="@+id/divider" android:layout_alignLeft="@+id/chart"/>
        <com.inteliclinic.neuroon.views.LightTextView android:textColor="@color/blue_3054FA" android:id="@+id/end_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/time_00_00_AM" android:layout_below="@+id/divider" android:layout_alignRight="@+id/chart"/>
        <android.support.percent.PercentRelativeLayout android:id="@+id/texts" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="16dp" android:layout_below="@+id/end_time" android:layout_alignBottom="@+id/chart">
            <com.inteliclinic.neuroon.views.ThinTextView android:textColor="@color/text_normal_color" android:gravity="bottom" android:id="@+id/thin_text_view_title" android:paddingBottom="8dp" android:layout_width="wrap_content" android:layout_height="0dp" android:text="@string/sleep" app:layout_heightPercent="50%"/>
            <com.inteliclinic.neuroon.views.ThinTextView android:textColor="@color/text_normal_color" android:gravity="top" android:id="@+id/thin_text_view_title2" android:paddingTop="8dp" android:layout_width="wrap_content" android:layout_height="0dp" android:text="@string/wake" android:layout_weight="1" android:layout_below="@+id/thin_text_view_title" app:layout_heightPercent="50%"/>
        </android.support.percent.PercentRelativeLayout>
        <com.inteliclinic.neuroon.views.charts.BarChartView android:id="@+id/chart" android:layout_width="wrap_content" android:layout_height="80dp" android:layout_marginRight="@dimen/activity_horizontal_margin" android:layout_marginBottom="16dp" android:layout_toRightOf="@+id/texts" android:layout_below="@+id/end_time"/>
        <android.support.percent.PercentRelativeLayout android:id="@+id/line" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_below="@+id/end_time" android:layout_alignBottom="@+id/chart">
            <Space android:id="@+id/space" android:layout_width="wrap_content" android:layout_height="0dp" app:layout_heightPercent="50%"/>
            <View android:layout_gravity="bottom" android:background="@color/light_grey_e8" android:layout_width="match_parent" android:layout_height="1dp" android:layout_below="@+id/space"/>
        </android.support.percent.PercentRelativeLayout>
    </RelativeLayout>
</ScrollView>
